backend/k8s/pg.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
  type: LoadBalancer
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  restartPolicy: OnFailure
  containers:
    - command:
        - docker-entrypoint.sh
        - postgres
      image: docker.io/library/postgres:latest
      name: postgres
      ports:
        - containerPort: 5432
          hostPort: 5432
          protocol: TCP
