backend/k8s/pgadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  type: NodePort
  selector:
    app: pgadmin
  ports:
    - port: 5050
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: pgadmin
  name: pgadmin
spec:
  restartPolicy: OnFailure
  containers:
    - env:
        - name: PGADMIN_DEFAULT_EMAIL
          value: admin@example.com
        - name: PGADMIN_DEFAULT_PASSWORD
          value: password
      image: dpage/pgadmin4
      name: pgadmin
      ports:
        - containerPort: 80
          protocol: TCP
