backend/k8s/rabbit.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  type: LoadBalancer
  ports:
    - port: 15672
      name: rabbitmq-management
    - port: 4369
      name: rabbitmq-epmd
    - port: 5672
      name: rabbitmq-cli-1
    - port: 56673
      name: rabbitmq-cli-2
    - port: 25672
      name: rabbitmq-internode
    - port: 61613
      name: rabbitmq-stomp-1
    - port: 61614
      name: rabbitmq-stomp-2
    - port: 1883
      name: rabbitmq-mqtt-1
    - port: 8883
      name: rabbitmq-mqtt-2
    - port: 15674
      name: rabbitmq-stomp-ws
    - port: 15675
      name: rabbitmq-mqtt-ws
    - port: 15692
      name: rabbitmq-prometheus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 15672
              hostPort: 15672
              protocol: TCP
            - containerPort: 6379
              hostPort: 6379
              protocol: TCP
            - containerPort: 25672
              hostPort: 25672
              protocol: TCP
---
